Fix some spacing and add create playlist for guests

--- a/app/assets/stylesheets/playlists.scss
+++ b/app/assets/stylesheets/playlists.scss
@@ -649,7 +649,7 @@ button.downvote.btn.darken-2 {
     left: 5% !important;
   }
  .search-container {
-   width: 84.95%;
+   width: 100%;
  }
 
  .viewable-screen-front {
